# Advent_tree

./: .gitignore  pyproject.toml  requirements.txt
.ebextensions/: 01-change-instance-type.config
cards/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
cards/migrations/: 0001_initial.py  0002_card_week.py  0003_card_ornament_x_card_ornament_y_alter_card_week.py  0004_alter_card_ornament_x_alter_card_ornament_y.py  0005_card_img_path.py
cards/templates/cards/: card_form.html
config/: settings.py  urls.py
config/logger/: setup_logger.py
notices/: admin.py  models.py  views.py
notices/migrations/: 0001_initial.py  0002_notice_title.py
quickstart/: views.py
templates/: card_form.html  cards.html
utils/: utils.py
